--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-    <h1 id="title"> Наведи курсор на текстове поле і з'явиться червоний блок на сторінці. </h1>
+    <h2 id="title"> Клікни на текстове поле і з'явиться червоний блок на сторінці. </h2>
     <input type="text" id="inputText">
+    <h2 id="secondTitle"> Наведи курсор на текстове поле і з'явиться червоний блок на сторінці. </h2>
+    <input type="text" id="inputSecondText">
     <script src="script.js"></script>
 </body>
 
